--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="A simple web app">
+    <meta name="description" content="my app">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.css">
@@ -83,7 +83,7 @@
             <div class="card-body">
                 <form>
                     <div class="form-group">
-                    <label for="mainTextArea">Type your request here:</label>
+                    <label for="mainTextArea">Type it https://www.apple.com/shop/buy-mac/mac-pro:</label>
                     <textarea id="mainTextArea" class="form-control" name="q"></textarea>
                     </div>
                     <div class="form-group">
@@ -94,7 +94,7 @@
         </div>
     </header>
 
-    <div class="card"><div class="card-body result-area">You will see results here.</div></div>
+    <div class="card"><div class="card-body result-area">in order to see result type only this link https://www.apple.com/shop/buy-mac/mac-pro.</div></div>
 
     <footer class="footer">
         <hr>
